added readme, covered intro of yaml, features & rules and string syntax

--- a/examples.yml
+++ b/examples.yml
@@ -15,4 +15,13 @@ Employees:
 names:
   - Madan Lal
   - Rishabh Mishra
+...
+---
+{
+  "names": [
+    "Madan Lal",
+    "Rishabh Mishra"
+  ]
+}
+...
 
